# tr

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  combinator.h  folder.h  main.cpp  tuple.h
benchmark/: CMakeLists.txt  benchmark_tuple.cpp
detail/: ebo.h  type_pack.h  type_traits.h  utility.h
include/: CMakeLists.txt  dummy.cpp
include/tr/: algorithm.h  as_array.h  at.h  combinator.h  drop_view.h  forward_as_base.h  indices_for.h  invoke.h  is_empty.h  is_valid.h  length.h  macros.h  overload.h  overloaded.h  reverse_view.h  tuple.h  tuple_protocol.h  tuple_view.h  type_constant.h  type_identity.h  type_pack.h  unpack.h  value_constant.h  value_sequence.h  view_interface.h
include/tr/algorithm/: all_of.h  any_of.h  fold_left.h  fold_left_first.h  for_each.h
include/tr/algorithm/fwd/: all_of.h  any_of.h  fold_left.h  fold_left_first.h  for_each.h
include/tr/detail/: callable_wrapper_impl.h  ebo.h  flat_array.h  literal_parser.h  tuple_traits_utils.h  type_traits.h  utility.h
include/tr/fwd/: at.h  combinator.h  indices_for.h  is_empty.h  is_valid.h  length.h  reverse_view.h  tuple.h  unimplemented.h  unpack.h
include/tr/tuple_protocol/: std_pair.h
include/tr/view/: drop_view.h  reverse_view.h  tuple_view.h  view_interface.h
tests/: CMakeLists.txt  all_of.cpp  drop_view.cpp  ebo.cpp  fold_left.cpp  forward_as_base.cpp  invoke.cpp  iwyu_mappings.imp  main.cpp  overload.cpp  overloaded.cpp  reverse_view.cpp  std_integer_sequence.cpp  tuple.cpp  type_constant.cpp  value_constant.cpp  value_sequence.cpp
tr/: algorithm.h  all_of.h  as_array.h  at.h  combinator.h  drop_view.h  for_each.h  indices_for.h  iota_for.h  is_valid.h  lazy_false.h  length.h  overload.h  overloaded.h  reverse_view.h  tuple.h  tuple_protocol.h  tuple_view.h  type_constant.h  type_pack.h  unimplemented.h  unpack.h  value_constant.h  value_sequence.h  view_interface.h
tr/algorithm/: all_of.h  for_each.h
tr/algorithm/fwd/: all_of.h  for_each.h
tr/detail/: ebo.h  flat_array.h  literal_parser.h  tuple_traits_utils.h  type_pack.h  type_traits.h  utility.h
tr/fwd/: all_of.h  at.h  drop_view.h  for_each.h  indices_for.h  iota_for.h  length.h  tuple.h  type_pack.h  unpack.h  value_constant.h  view_interface.h
tr/tuple_protocol/: built_in_array.h  std_index_sequence.h  std_integer_sequence.h  std_pair.h  std_tuple.h
